removed get_Order_by_quantity
